--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque quo saepe omnis.</h1>
+    <details>
+        <summary>Lorem ipsum dolor sit.</summary>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci, earum minima eveniet quas iure magni dolore soluta repudiandae. Fugit itaque architecto culpa, eum, eaque blanditiis amet sequi voluptas voluptates dolore optio officiis cupiditate, aliquam aliquid.</p>
+    </details>
 </body>
 </html>
