--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <details>
-        <summary>Lorem ipsum dolor sit.</summary>
+        <summary>All about Lorem</summary>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci, earum minima eveniet quas iure magni dolore soluta repudiandae. Fugit itaque architecto culpa, eum, eaque blanditiis amet sequi voluptas voluptates dolore optio officiis cupiditate, aliquam aliquid.</p>
     </details>
 </body>
